@@ -6,15 +6,21 @@ AUX gmock-1.4.0-more-gcc-4.7.patch 5156 SHA256 be933382c5baf74eb3304c619c6f00463
 DIST gmock-1.4.0.tar.bz2 946373 SHA256 21d37c154a7b8d7a8562b9dde82db7db0a6c188b985c4a18ff3413daae8caa8c SHA512 df99aae44d23f4b0b4ce9ac24fde9e72508c9a915323dd07fb475c708953b79310c164141d085a04a9203b6abd759336d55a94979495f429c92f11bc4d1b038c WHIRLPOOL 7a4525a589770cd5de21c0b82a7b9a7219b3fcdef605e0b455dfff50bc87ff1432b3989cc7e0c08c42c68083e2618841a77d8afcf4ed51b3f55f09a5a64c4fb2
 DIST gmock-1.5.0.tar.bz2 1283432 SHA256 d8689a51fbc13f55509f5842fe7d514839d9fd6092743d145304bc2824fc9197 SHA512 b0a3897c801d14a9f59a07911fa77ae15ddae9bef6e2d818583ff0b5085d35507259c195b43a6fe25af70b4d2eee3796889ffcda91d16ce6e6e5b4e462196aa2 WHIRLPOOL f00854ebdece304006907ea2e3906fbe58578a7a3684d93eb8e9f2c26bd100f751878109d5fd13a31cf58463d759fc09c1b07c035107c127c19f572ff264fd76
 DIST gmock-1.6.0.zip 2053682 SHA256 341ad07c31c619ba32c88c2265bc23693da1df062f47f146a7ed340f646d82b7 SHA512 7adff00bb6ff81a6ffb704be71d0747636d69e24b4a8b709e1fb8c177a9a47f6dea8d14fde73034ebfb1529c291c7212a944ad92a34f88abdfe23c2d0b11b6f7 WHIRLPOOL 1a03ff8f2d96287f5deb24f970688f20f3480e77a4a71089ef1399a87f28f616bf0feaedc217e7ac1ca8ca1246e53f5d882f350704be111ae547961949939530
+DIST gmock-1.7.0.zip 2167746 SHA256 26fcbb5925b74ad5fc8c26b0495dfc96353f4d553492eb97e85a8a6d2f43095b SHA512 0ab7bb2614f8c00e4842a6819dbc6d9323c42241335078c23eaee53ed420d42f1845d44334eccbf7c114cc88f6ac7a493e20d9b46c58cdba645bbd400eb6db55 WHIRLPOOL 722ea3f8bd4130662386810ae0270baafcecb6b7066e8a361388d530e7a2bad4e10787c921c6bb5cefb15a640f4302d288d07deea58acf8c5f5ca84d82722c8e
 EBUILD gmock-1.4.0.ebuild 900 SHA256 ac6459b47610fabc4a1976a27b813a5d60bc2ed94b053e0f0f95eaa9317f2919 SHA512 dc4bd30c218906d7a43798dc4393d6b9201328185d6dc5e5fa591ec44419b71814d759e9061b2b7125d1efb41e670e9680c6ccd50be1835e7ae496020a5b6d33 WHIRLPOOL ebec651a934b28ecc628f6abfb3ebea8442b2eb572b5cd4cfafd86f1286454afff51de5260f0d5afe75253a52788b08253af08d7274283df52a7e9bef0b0b89c
 EBUILD gmock-1.5.0.ebuild 801 SHA256 da8e3eb98f7fc07b8909373b612700c8a861c5c92bb48ee27c5addf787848657 SHA512 d1813c15ecc635418c859f69ba49c4ff401daf56bef042d9d8e8abc1f072421af04579f0aea4e4ad6c650b60aaa2f1ccea65bd295a298f0cce5c3cfd5f9ddd52 WHIRLPOOL 47ed5fafcb25a3414bb06c8eb27688c571b42e7b52f84089414e82ac8944b736a66698023b9dd81d3201316af07fe5056c6741e925f185c85efaaa0bccf4dcaf
 EBUILD gmock-1.6.0.ebuild 992 SHA256 031f2b972aeedb7b0bfba34a8ab94b49a00c80005808aba529193fdb0c9d70c6 SHA512 ffd7753e468aa832f416055a0ec34487f8eeeac37e433d21d126b53dc19416891b7e7977d5cb5385cf837b31274455e7da499b5dcaac029cdceac4d150d0bc6c WHIRLPOOL 113758efc01147a8f0a83c332e15bc7c01b0a89e0233e7178b31bc6d01c8ce6b5362049abb91ce085f5bd75796e345fcfe15778dfec597a637a85ad67ca92aba
-MISC ChangeLog 2367 SHA256 e38db40de3f2a9936b5024f47d9b0e3f96ee36e16dfdc2bbfb1b8470221a2b29 SHA512 749c2155f293157c915657d8d92885958c46e025a5ac75c54d5d9b092bd880f8332a06cef64354bc9a3c7ceda8b73921859f29047d98f2866f83e8f85d05ac3d WHIRLPOOL 22314f28732e8a80884e3447a0dec9941d35b02776c54d2d5b03392baae913fff218e4734248881451c3e087cb7d5389795819c4bb6087b8dca15ebb28746fca
+EBUILD gmock-1.7.0.ebuild 1003 SHA256 1544f2c85385de37a6a5494f67c38652eba49e67f494ef563143413f237b5fd8 SHA512 d7f4d52ec8280e7e2a4eefc33cdaacd1dd6bd18fdc8d7f4c9ba4ae3b9c49060ac303e486a59e0ab0adfaf5cb4e54f386a1df2f0465a85c7fefc461c419e16ba5 WHIRLPOOL f0b7b913e5ef102c7af733200db686d8bf0cbf4c07121369a1a72a5d9c8825f69b9ada3079bf76fa4754f76adebc96635fa9bb9e7074d89bcb4c6a85fef8675b
+MISC ChangeLog 2522 SHA256 38fd124917dd7b4fd066a3dd00b7aab1e38ad5ae58bbaa18c3ec14fb2fa18ff3 SHA512 7201271b83c42d7896d450f12e8d74be25e0c84acaaa7e968a64872eb8a6ffa41f9aba90ef3f52db6bf44841311cf03fceeadb5776637fa603fa19715097a1e2 WHIRLPOOL 417395fcf4031b517385b7341d2d2993b4404584d13c3163d3c5f4b4bc4e789491500d606cfae63b33f4a0f285e9ca5d9768f2ae29283fac10ece7e022a94811
 MISC metadata.xml 283 SHA256 c34e015327f31293e860e8b2366e59e1d361c67f47d1c2cb010e16f43521a0f2 SHA512 e85ed05e67750a75476066754448e724ab3e65c91af152befff80c7f66423254311243fa213ba282bcc6456499964d4c969103cad829d8386ab3ef50138b5b81 WHIRLPOOL 3c504418a30332c69ad4282d204ff0ffeef35bc0aff4071d0c7f51704e7a1e091ce7e72826de354f8d1ded20920d61fa60bee4fafd3db8bd43acb9cdce9717bf
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlKmGjgACgkQVWmRsqeSphPWnACfSZ9ZYuPc6n/nU0vsHAi2NuJu
-nBIAniGypUBgoMr4qsbxeFj7WtGQz7em
-=Nom4
+iQEcBAEBCAAGBQJS0jnDAAoJEO04vUmVeoRjuQ0IALd/q5rI/LbN016eRSlHjUcP
+xtF4GsrD/Pl6n1N5qvme/UY6J6icVXv9c0UvIsv2psU9suLJMuZj13Rtj6zLBnVa
+SRjkMwK4UmpdY8p8KGBxMnqR/iscv188sdfEWaJ+M/j1lhtsNrZPaQzivk7MIamT
+ihNzJ/G0pc7LxRqNvEYcGla2cCjlhRWRAbezaNgX28KjE0cq1o3lIinqNiCQVT8K
+huWbF74nNWCcQbfn+cKSDJZDYokdOlPt9xj4yBV3x7miVbdFcJ46LWMWQd+8aZIJ
+CKRGphGbVoX6Y7TCtK0LMRbhPsUboxD62UkxSfeTS+qmqq2azCdn41RcZjDv6to=
+=b288
 -----END PGP SIGNATURE-----
