@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST docile-1.1.1.gem 13824 SHA256 96c32bed507bb08b893349f5440a0d23b8b4ddedf93f91543a1d1c264381cd29 SHA512 d9c9c5438360c669b7cbfc30191e040ea5efca1ebd6f311ddcb637e7f77c6ee0ea52bf0766c736a7dad735966e26b64f9b9ceafa4cafa8590726c8720c850eb5 WHIRLPOOL 5a8e2467015d739edaaa2b61b88122bfc493c3202649dd5a18a4593afd53e7bf6680cbd6b9c2d1b5e57ff18e3dd8c21dda1a16908917fa2b1cc306e6a1903970
+DIST docile-1.1.2.gem 13824 SHA256 13e45b07713b8b18918d43077b773ea572a8ae6c72acc74b14f7cac8fbec5920 SHA512 9704200eebc20fba4482e84ae88bcb9b4afdf3a6b01f8f1302439db6a6f184aa355f7dd2f04e274fcea04d0be4647e4da50e89260657aef5284656aeeeb06b72 WHIRLPOOL 4496b70c50f230bbe81e810d342f4edff09075058aac9eac7f50b61fcfcc1de0539f8eafee3c75f92722b58f095a64529c552a4361d2f66d7f59635c2c36cfe9
 EBUILD docile-1.1.1.ebuild 738 SHA256 1a53e74dadee46338035e19aae8852d231dc25293516fd72ac048dbe5999e29e SHA512 0c4c92ae98643eba54fcec3324d814d2509bcfff20e7338cf41353de6048941fc3d3a5577fcf4f03c4b5403fec31c719f376d78948ecfe13db23b898f110b97c WHIRLPOOL 3bfe1f7d456c4d709477fc42416ceed67d4206757e36f66eb45964cd9dcfa42798615436763c8b728febe4cf61c0b0b1a83e6653c6f4fcc42ad00b79f459226d
-MISC ChangeLog 580 SHA256 941f6d3866a348f1953fbe71a6e333f34b3e9cff3a7084c3643fd443a0013bd6 SHA512 179694b4fe0ceb34475f210cef9024f56d2a386067a26b74b3df779c96b6fa39a1e14552b9b2bec1187238815e586db4d5763fa78220e8293d8565c65747030a WHIRLPOOL f730cd589bf6a8c6ab539ce59da441a574172df80d3e486a5ec703553a295dd76420663e4033bcbaebeb574195b37019188bcade9754ad78bcb91e4c004315ad
+EBUILD docile-1.1.2.ebuild 739 SHA256 5f837a4ea59435418829c3312557f69215ed7a9b7846cb7dd22b500006af77e3 SHA512 63af5e1281ba1d8e46be7de8cf1208913c1094002b27f9dcf4c1abd30c9b42f8748b8e943c9043c16d0871230f469ade45b3bbd4252aee7000cdc683c0518dc2 WHIRLPOOL a6a639ba009572d7a791dff7ee95032587ebdce4370522cb503989ff87d5415dfd2e1406aa68c6f7f867d43b836477ff46e6c7308774e3751af22f446c34dbb0
+MISC ChangeLog 699 SHA256 f4fad736e244075389089be995f6a1e7ef37a756ab553bce3b9be2423c015497 SHA512 e98bc507f9150d63f455ae8c4bbd02f6d6f06d3d93be6710e67a92dab51310e26ac3ea3e74e6597fbc7a8d01021f020de3038b9290a22368f1f46d16860a362c WHIRLPOOL 7c8953911a4b10643d317a859a0f4e64769160518df10a561a05111a329e3d7db324960c9936e2b0d50c46c285296a0d2e5756f2f9f60a11d648a4cbbb2a8c87
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iF4EAREIAAYFAlLSN2oACgkQiIP6VqMIqNctlgD+Ld64ghgyowqDCxIhGDV4YzRX
+7UOUVdfmruGGMv6m9IoA/R1Vp1myqTP4Swjq2/1NMB6K4gBlmT0w7fW625jzJcgi
+=CrxD
+-----END PGP SIGNATURE-----
