@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/docile
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/docile/ChangeLog,v 1.3 2013/11/27 09:18:06 mrueg Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/docile/ChangeLog,v 1.4 2014/01/12 06:34:12 graaff Exp $
+
+*docile-1.1.2 (12 Jan 2014)
+
+  12 Jan 2014; Hans de Graaff <graaff@gentoo.org> +docile-1.1.2.ebuild:
+  Version bump.
 
 *docile-1.1.1 (27 Nov 2013)
 
